[gd_scene load_steps=5 format=3 uid="uid://ch3cttlmx0csj"]

[ext_resource type="Script" path="res://Scripts/towers.gd" id="1_t5mft"]
[ext_resource type="Texture2D" uid="uid://fsq8dbtddvrw" path="res://Assets/Towers/Archer/archer_level_1.png" id="2_3v57g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjxru"]
size = Vector2(84, 120.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_41k8i"]

[node name="Tower" type="StaticBody2D"]
script = ExtResource("1_t5mft")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gjxru")

[node name="Area" type="Marker2D" parent="."]
position = Vector2(-1, -37)

[node name="TowerArcher1" type="Sprite2D" parent="."]
texture = ExtResource("2_3v57g")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(20.8901, 20.8901)
shape = SubResource("CircleShape2D_41k8i")

[node name="FlechaContainer" type="Node" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
